src/main/java/com/example/demotest/core/errors/failures/concretes/ServerFailure.java
package com.example.demotest.core.errors.failures.concretes;

import com.example.demotest.core.errors.failures.Failure;

public final class ServerFailure extends Failure {
    public ServerFailure(String message) {
        super(message);
    }
}
